# purpleair2mqtt

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  example_sensor_data.json  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/purpleair2mqtt/: __init__.py  app_configuration.py  main.py  mqtt_event_receiver.py  purpleair_receiver.py
