[project]
name = "purpleair2mqtt"
version = "0.1.0"
description = "PurpleAir to MQTT bridge"
authors = [
    { name = "Ryan Gregg" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anyio==4.7.0",
    "certifi==2024.12.14",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "paho-mqtt==2.1.0",
    "PyYAML==6.0.2",
    "sniffio==1.3.1",
    "typing_extensions==4.12.2"
]

[project.scripts]
purpleair2mqtt = "purpleair2mqtt.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
